--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,31 @@
 
 #sect-01-cont{
     width: 100%;
+    background-color: #323030;
 }
 
 #sect-01-top-nav {
-    padding-top: 1%;
+    padding-top: 1.5%;
+    font-family: 'Barlow', sans-serif;
+}
 
+#sect-01-top-nav a{
+    color: whitesmoke;
 }
 
 #top-nav-button {
     padding-top: 1%;
     padding-left: 4%;
+    font-family: 'Barlow', sans-serif;
+}
+
+#top-nav-button a{
+    color: whitesmoke;
+}
+
+.header-title{
+    color: whitesmoke;
+    font-family: 'Barlow', sans-serif;
 }
 
 
@@ -78,4 +93,83 @@
         padding-top: 1%;
         
     }
+}
+
+/* ----------------------------------- */
+/* main Section 2 */
+
+hr{
+    border: 2px solid rgb(244, 241, 242);
+}
+
+#horizontal-line1 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #323030;
+}
+
+
+#sect-03-cont-login-button{
+    padding-left: 80%;
+    font-family: 'Barlow', sans-serif;
+}
+
+#sect-02-cont {
+    background-color: #323030;
+}
+/* ----------------------------------- */
+/* Login Sect 3 */
+
+.login{
+    padding-bottom: 10px;
+    font-family: 'Barlow', sans-serif;
+}
+
+#password-text{
+    font-family: 'Barlow', sans-serif;
+}
+
+#sect-03-cont {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #d6d5d5;
+}
+
+#sect-03-cont-img1{
+    padding-left: 18%;
+}
+
+#sect-03-cont-img2 {
+    height: 340px;
+}
+
+/* ----------------------------------- */
+/* Footer Sect 3b */
+
+#horizontal-line2 {
+    padding-top: 20px;
+    background-color: #323030;
+}
+
+
+/* ----------------------------------- */
+/* Footer Sect 4 */
+
+#sect-04-cont{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #323030;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+#sect-04-social-icons a {
+    color: whitesmoke;
+    opacity: 25%;
+}
+
+#copyright{
+    color: whitesmoke;
+    font-family: 'Barlow', sans-serif;
+    opacity: 25%;
 }
