--- a/css/style.css
+++ b/css/style.css
@@ -56,56 +56,8 @@
 /* ----------------------------------- */
 /* Section 1 Media Queries */
 
-@media (max-width: 751px){ 
-    #sect-01-cont h1{
-        text-align: center;
-    }
-    
-    #top-nav-button{
-        padding-left: 40%;
-        
-    }
-}
 
-@media (max-width: 775px){
-    #top-nav-button{
-        padding-left: 40%;
-    }
-}
 
-@media (max-width: 1006px) { 
-    #sect-01-cont h1{
-        text-align: center;
-        font-size: 30px;
-    }
-    
-    #sect-01-top-nav {
-        font-size: 13px;
-        padding-left: 35px;
-        justify-content: space-between;
-    }
-}
-
-@media (max-width: 1124px) { 
-    #sect-01-cont h1{
-        padding-top: 3%;
-        text-align: center;
-        font-size: 30px;
-    }
-    
-    #sect-01-top-nav {
-        padding-top: 2%;
-        padding-left: 35px;
-        font-size: 13px;
-        justify-content: space-between;
-    }
-
-    #top-nav-button{
-        padding-top: 1%;
-        
-        
-    }
-}
 
 /* ----------------------------------- */
 /* main Section 2 */
@@ -141,22 +93,17 @@ hr{
 
 #section-02a-cont-top{
     padding-top: 40px;
-    background-color: #64696d;
-}
-
-#section-02b-cont-bottom{
-    padding-top: 40px;
     padding-bottom: 40px;
     background-color: #64696d;
 }
 
 
 .section-02a-cont-top-set1{
-    padding-left: 4%;
+    padding-left: 6%;
 }
 
 .section-02a-cont-top-set2{
-    padding-left: 4%;
+    padding-left: 6%;
 }
 
 .git-card-combo h5, a{
@@ -166,7 +113,6 @@ hr{
 .git-card-combo p{
     text-align: center;
 }
-
 
 /* ----------------------------------- */
 /* Login Sect 3 */
@@ -386,22 +332,81 @@ hr{
 }
 
 /* ----------------------------------- */
-/* Login Sect 3 Media Queries*/
+/* Media Queries*/
 
-@media (max-width: 1000px){
-    #sect-03-cont-login-button {
-        padding-left: 40%;
+@media (max-width: 751px){ 
+    #sect-01-cont h1{
+        text-align: center;
     }
-
-    #sect-03-cont-submit-button {
-        padding-left: 35%;
+    
+    #top-nav-button{
+        padding-left: 40%;
+        
     }
 
     #copyright h5{
-        font-size: 15px;
+        font-size: 16px;
+        text-align: center;
     }
 
+    #section-02a-cont-top{
+        padding-top: 40px;
+        padding-bottom: 40px;
+        padding-left: 40px;
+        background-color: #64696d;
+    }
+
+    
+    #sect-03-cont-img1 img{
+        padding-left: 20%;
+    
+    }
+    
+    #sect-03-cont-img2 img{
+        padding-left: 20%;
+        
+    }
+
+    #sect-04-cont div{
+        justify-content: center;
+    }
+
+    .section-02a-cont-top-set1{
+        padding-left: 11%;
+    }
+    
+    .section-02a-cont-top-set2{
+        padding-left: 11%;
+    }
+
+    #sect-03-blog-div{
+        margin-top: 10%;
+        margin-left: 20%;
+    }
+
+    #sect-03-blog-cont{
+        margin-left: 4%;
+    }
+
+    #sect-03-blog-cont div p{
+        margin-top: 5%;
+    }
+
+    #article-line1{
+        margin-left: 1%;
+    }
+
+    #blog-items-right{
+        margin-left: 20%;
+    }
+
+    .blog-post{
+        margin-left:30%;
+    }
+
+    
 }
+
 
 @media (max-width: 758px){
     .login{
@@ -437,6 +442,166 @@ hr{
     }
 }
 
+@media (max-width: 775px){
+    #top-nav-button{
+        padding-left: 40%;
+    }
+}
+
+@media (max-width: 851px){
+    #blog-items-right {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    #article-line1{
+        width: 90%;
+        margin-left: 20%;
+    }
+
+    #sect-03-cont{
+        padding-bottom: 34%;
+    }
+
+}
+
+@media (max-width: 896px){
+    .section-02a-cont-top-set1{
+        padding-left: 8%;
+    }
+    
+    .section-02a-cont-top-set2{
+        padding-left: 8%;
+    }
+}
+
+@media (max-width: 1000px){
+    #sect-03-cont-login-button {
+        padding-left: 40%;
+    }
+
+    #sect-03-cont-submit-button {
+        padding-left: 35%;
+    }
+
+    #copyright h5{
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width: 1006px) { 
+    #sect-01-cont h1{
+        text-align: center;
+        font-size: 30px;
+    }
+    
+    #sect-01-top-nav {
+        font-size: 13px;
+        padding-left: 35px;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 1025px){
+    .header-title h1{
+        font-size: 16px;
+    }
+
+    #sect-01-top-nav a{
+        font-size: 13px;
+    }
+
+}
+
+@media (max-width: 1062px){
+    .section-02a-cont-top-set1{
+        padding-left: 4%;
+    }
+    
+    .section-02a-cont-top-set2{
+        padding-left: 4%;
+    }
+
+}
+
+@media (max-width: 1081px){
+    #blog-items-right {
+        width: 70%;
+        margin-left: 30%;
+    }
+
+    #top-nav-button button{
+        width: 90px;
+        margin-bottom: 20px;
+        
+    }
+
+    #notice-number{
+        width: 70%;
+        margin-left: 30%;
+    }
+
+    #article-line1{
+        width: 70%;
+        margin-left: 30%;
+    }
+
+    #all-number{
+        width: 70%;
+        margin-left: 30%;
+    }
+
+    #section-03-manage{
+        width: 70%;
+        margin-top: -10%;
+        margin-left: 30%;
+    }
+
+    #blog-post-dates{
+        margin-left: 8%;
+    }
+
+    #blog-cont{
+        width: 70%;
+        margin-left: 30%;
+    }
+
+    #sect-03-cont{
+        padding-bottom: 36%;
+    }
+
+    .section-02a-cont-top-set1{
+        width: 400px;
+    }
+
+    .section-02b-cont-top-set2{
+        padding: 400px;
+    }
+
+}
+
+@media (max-width: 1124px) { 
+    #sect-01-cont h1{
+        padding-top: 3%;
+        text-align: center;
+        /* font-size: 30px; */
+    }
+    
+    #sect-01-top-nav {
+        padding-top: 2%;
+        padding-left: 35px;
+        /* font-size: 13px; */
+        justify-content: space-between;
+    }
+
+    #top-nav-button{
+        padding-top: 1%;
+        
+        
+    }
+}
+
 /* ----------------------------------- */
 /* Footer Sect 4 */
 
@@ -456,7 +621,7 @@ hr{
 
 #sect-04-social-icons a {
     color: #eef3f7;
-    opacity: 25%;
+    opacity: 55%;
 }
 
 #sect-04-social-icons a:link {
@@ -479,7 +644,7 @@ hr{
 #copyright{
     color: #eef3f7;
     font-family: 'Barlow', sans-serif;
-    opacity: 25%;
+    opacity: 55%;
 }
 
 #copyright h5 {
@@ -487,53 +652,4 @@ hr{
     opacity: 55%;
 }
 
-@media (max-width: 751px){ 
-    #copyright h5{
-        font-size: 16px;
-        text-align: center;
-    }
-    
-    #sect-03-cont-img1 img{
-        padding-left: 20%;
-    
-    }
-    
-    #sect-03-cont-img2 img{
-        padding-left: 20%;
-        
-    }
 
-    #sect-04-cont div{
-        justify-content: center;
-    }
-
-    .section-02a-cont-top-set1{
-        padding-left: 25%;
-    }
-    
-    .section-02a-cont-top-set2{
-        padding-left: 25%;
-    }
-
-    #sect-03-blog-div{
-        margin-top: 10%;
-        margin-left: 20%;
-    }
-
-    #sect-03-blog-cont{
-        margin-left: 4%;
-    }
-
-    #sect-03-blog-cont div p{
-        margin-top: 5%;
-    }
-
-    #article-line1{
-        margin-left: 1%;
-    }
-
-    .blog-post{
-        margin-left:30%;
-    }
-    
-}
