--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ hr{
 }
 
 #article-line1 hr{
+    width: 64%;
     border: 2px solid #242e38;
 }
 
@@ -116,6 +117,16 @@ hr{
 
 /* ----------------------------------- */
 /* Login Sect 3 */
+.sect-03-cont-article{
+    padding-top: 6%;
+}
+
+/* .section-03-cont-block {
+    padding-left: 15%;
+
+} */
+
+
 #sect-03-cont{
     background-color: #64696d;
 }
