--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     border: 1px dotted red
-} */
+}
 
 /* ----------------------------------- */
 /* Section 1 */
@@ -77,7 +77,7 @@ hr{
 }
 
 #article-line1 hr{
-    width: 64%;
+    /* width: 100%; */
     border: 2px solid #242e38;
 }
 
@@ -132,8 +132,13 @@ hr{
 }
 
 #sect-03-cont-login-button{
-    padding-left: 80%;
+    padding-top: .5%;
+    padding-left: 5%;
     font-family: 'Barlow', sans-serif;
+}
+
+.play-button-box {
+    background-color: #eef3f7
 }
 
 #sect-03-cont-login-button a{
@@ -154,6 +159,10 @@ hr{
 
 #sect-03-cont-login-button a:active {
     text-decoration: none;
+}
+
+#sect-03-cont-play-button{
+    padding-bottom: 1%;
 }
 
 .login{
@@ -221,13 +230,13 @@ hr{
 }
 
 #military-pic1{
-    margin-top: 49%;
-    padding-left: 7%;
+    /* margin-top: 10%; */
+    padding-left: 23%;
 }
 
 #military-pic2{
-    margin-top: 14%;
-    padding-left: 7%;
+    /* margin-top: 10%; */
+    padding-left: 22%;
 }
 
 #sect-03-user-box{
@@ -555,7 +564,6 @@ hr{
 
     #article-line1{
         width: 70%;
-        margin-left: 30%;
     }
 
     #all-number{
@@ -576,10 +584,6 @@ hr{
     #blog-cont{
         width: 70%;
         margin-left: 30%;
-    }
-
-    #sect-03-cont{
-        padding-bottom: 36%;
     }
 
     .section-02a-cont-top-set1{
