--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,27 @@
 
 /* ----------------------------------- */
 /* Section 1 */
+/* .hamburger-menu{
+    padding-top: 8%;
+    padding-right: 1%;
+} */
 
 #sect-01-cont{
     width: 100%;
     background-color: #242e38;
 }
 
+#sect-01-cont h1{
+    font-size: 24px;
+}
+
+#page-title {
+    padding-top: 4%;
+    padding-left: 20%;
+}
+
 #sect-01-top-nav {
-    padding-top: 1.5%;
+    padding-top: 1%;
     text-transform: uppercase;
     font-family: 'Barlow', sans-serif;
 }
@@ -39,7 +52,7 @@
 }
 
 #top-nav-button {
-    padding-top: 1%;
+    padding-top: .4%;
     padding-left: 4%;
     font-family: 'Barlow', sans-serif;
 }
@@ -57,10 +70,171 @@
 }
 
 /* ----------------------------------- */
-/* Section 1 Media Queries */
+/* Hamburger Menu*/
 
+/*
+ * Made by Erik Terwan
+ * 24th of November 2015
+ * MIT License
+ *
+ *
+ * If you are thinking of using this in
+ * production code, beware of the browser
+ * prefixes.
+ */
 
-
+ body
+ {
+   margin: 0;
+   padding: 0;
+   
+   /* make it look decent enough */
+   background: #232323;
+   color: #cdcdcd;
+   font-family: "Avenir Next", "Avenir", sans-serif;
+ }
+ 
+ #menuToggle
+ {
+   display: block;
+   position: relative;
+   top: 28%;
+   left: 50px;
+   
+   z-index: 1;
+   
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle a
+ {
+   text-decoration: none;
+   color: #232323;
+   
+   transition: color 0.3s ease;
+ }
+ 
+ #menuToggle a:hover
+ {
+   color: tomato;
+ }
+ 
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0; /* hide this */
+   z-index: 2; /* and place it over the hamburger */
+   
+   -webkit-touch-callout: none;
+ }
+ 
+ /*
+  * Just a quick hamburger
+  */
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #cdcdcd;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ /* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ /*
+  * But let's hide the middle one.
+  */
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   /* opacity: 0; */
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+ /*
+  * Ohyeah and the last one should go the other direction
+  */
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+ 
+ /*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
+ #menu
+ {
+   position: absolute;
+   width: 300px;
+   margin: -100px 0 0 -50px;
+   padding: 50px;
+   padding-top: 125px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   /* to stop flickering of text in safari */
+   
+   transform-origin: 0% 0%;
+   transform: translate(-100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 10px 0;
+   font-size: 22px;
+ }
+ 
+ /*
+  * And let's slide it in from the left
+  */
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+ }
 
 /* ----------------------------------- */
 /* main Section 2 */
@@ -128,6 +302,7 @@ hr{
     padding-left: 15%;
 
 } */
+
 
 
 #sect-03-cont{
@@ -395,6 +570,11 @@ hr{
 /* Media Queries*/
 
 @media (max-width: 751px){ 
+    #page-title {
+        padding-left: 17%;
+        padding-bottom: 10%;
+    }
+
     #sect-01-cont h1{
         text-align: center;
     }
@@ -598,10 +778,6 @@ hr{
 }
 
 @media (max-width: 1025px){
-    /* #sect-01-cont{
-        display: flex;
-        flex-direction: column;
-    } */
     .header-title h1{
         font-size: 16px;
     }
@@ -620,10 +796,6 @@ hr{
     #section-02a-cont-top{
         padding-left: 30%;
     }
-
-    /* #top-nav-button{
-        padding-left: 2%;
-    } */
 
     #sect-03-cont{
         padding-left:8%;
@@ -802,5 +974,12 @@ hr{
     text-transform: uppercase;
     opacity: 55%;
 }
+
+
+
+
+
+
+
 
 
