--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
     padding-right: 1%;
 } */
 
+
+
 #sect-01-cont{
     width: 100%;
     background-color: #242e38;
@@ -31,6 +33,7 @@
 
 #sect-01-top-nav a{
     color: #eef3f7;
+    font-size: 18px;
 }
 
 #sect-01-top-nav a:link {
@@ -71,170 +74,15 @@
 
 /* ----------------------------------- */
 /* Hamburger Menu*/
-
-/*
- * Made by Erik Terwan
- * 24th of November 2015
- * MIT License
- *
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
-
- body
- {
-   margin: 0;
-   padding: 0;
-   
-   /* make it look decent enough */
-   background: #232323;
-   color: #cdcdcd;
-   font-family: "Avenir Next", "Avenir", sans-serif;
- }
- 
- #menuToggle
- {
-   display: block;
-   position: relative;
-   top: 28%;
-   left: 50px;
-   
-   z-index: 1;
-   
-   -webkit-user-select: none;
-   user-select: none;
- }
- 
- #menuToggle a
- {
-   text-decoration: none;
-   color: #232323;
-   
-   transition: color 0.3s ease;
- }
- 
- #menuToggle a:hover
- {
-   color: tomato;
- }
- 
- 
- #menuToggle input
- {
-   display: block;
-   width: 40px;
-   height: 32px;
-   position: absolute;
-   top: -7px;
-   left: -5px;
-   
-   cursor: pointer;
-   
-   opacity: 0; /* hide this */
-   z-index: 2; /* and place it over the hamburger */
-   
-   -webkit-touch-callout: none;
- }
- 
- /*
-  * Just a quick hamburger
-  */
- #menuToggle span
- {
-   display: block;
-   width: 33px;
-   height: 4px;
-   margin-bottom: 5px;
-   position: relative;
-   
-   background: #cdcdcd;
-   border-radius: 3px;
-   
-   z-index: 1;
-   
-   transform-origin: 4px 0px;
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0.55s ease;
- }
- 
- #menuToggle span:first-child
- {
-   transform-origin: 0% 0%;
- }
- 
- #menuToggle span:nth-last-child(2)
- {
-   transform-origin: 0% 100%;
- }
- 
- /* 
-  * Transform all the slices of hamburger
-  * into a crossmark.
-  */
- #menuToggle input:checked ~ span
- {
-   opacity: 1;
-   transform: rotate(45deg) translate(-2px, -1px);
-   background: #232323;
- }
- 
- /*
-  * But let's hide the middle one.
-  */
- #menuToggle input:checked ~ span:nth-last-child(3)
- {
-   /* opacity: 0; */
-   transform: rotate(0deg) scale(0.2, 0.2);
- }
- 
- /*
-  * Ohyeah and the last one should go the other direction
-  */
- #menuToggle input:checked ~ span:nth-last-child(2)
- {
-   transform: rotate(-45deg) translate(0, -1px);
- }
- 
- /*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
- #menu
- {
-   position: absolute;
-   width: 300px;
-   margin: -100px 0 0 -50px;
-   padding: 50px;
-   padding-top: 125px;
-   
-   background: #ededed;
-   list-style-type: none;
-   -webkit-font-smoothing: antialiased;
-   /* to stop flickering of text in safari */
-   
-   transform-origin: 0% 0%;
-   transform: translate(-100%, 0);
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
- }
- 
- #menu li
- {
-   padding: 10px 0;
-   font-size: 22px;
- }
- 
- /*
-  * And let's slide it in from the left
-  */
- #menuToggle input:checked ~ ul
- {
-   transform: none;
- }
+.navbar-brand{
+    color: whitesmoke;
+    font-size: 22px;
+    font-family: 'Barlow', sans-serif;
+}
+#navbarSupportedContent ul li a{
+    color: whitesmoke;
+    font-family: 'Barlow', sans-serif;
+}
 
 /* ----------------------------------- */
 /* main Section 2 */
@@ -292,6 +140,51 @@ hr{
     text-align: center;
 }
 
+.card-title{
+    color: #232323;
+}
+
+.card-text {
+    color: #232323;
+}
+
+#sect-03-blog-div h4{
+    color: #232323;
+}
+
+#sect-03-cont-blog-list {
+    color: #232323;
+}
+
+#notice-number p{
+    color: #232323;
+}
+
+#all-number p{
+    color: #232323;
+}
+
+#section-03-manage{
+    color: #232323;
+}
+
+#blogger-header{
+    color: #232323;
+}
+
+#blog-post-dates{
+    color: #232323;
+}
+
+#my-blog-name{
+    color: #232323;
+}
+
+.section-03-cont-bottom-icons{
+    color: #232323;
+}
+
+
 /* ----------------------------------- */
 /* Login Sect 3 */
 .sect-03-cont-article{
@@ -318,6 +211,7 @@ hr{
 .play-button-box {
     background-color: #eef3f7
 }
+
 
 #sect-03-cont-login-button a {
     color: #eef3f7;
@@ -358,6 +252,7 @@ hr{
 }
 
 .sect-03-about-me {
+    color: #232323;
     text-transform: uppercase;
 }
 
@@ -408,10 +303,12 @@ hr{
 
 
 #bio-paragraph1{
+    color: #232323;
     text-indent: 50px;
 }
 
 #bio-paragraph2{
+    color: #232323;
     text-indent: 50px;
 }
 
@@ -553,6 +450,10 @@ hr{
 
 #sect-03-cont-submit-button {
     margin-left: 70%;
+}
+
+.form-label{
+    color: #232323;
 }
 
 
@@ -943,7 +844,7 @@ hr{
 
 #sect-04-social-icons a {
     color: #eef3f7;
-    opacity: 55%;
+    opacity: 65%;
 }
 
 #sect-04-social-icons a:link {
@@ -970,6 +871,7 @@ hr{
 }
 
 #copyright h5 {
+    color: #eef3f7;
     font-size: 14px;
     text-transform: uppercase;
     opacity: 55%;
